--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.9",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.2",
     "vue": "^2.6.14"
   },
   "devDependencies": {
