--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "element-ui": "^2.15.9",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
