--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
+    "vue-form-wizard": "^0.8.4",
+    "vue-lottie": "^0.2.1",
     "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
