--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
-    "vue-form-wizard": "^0.8.4",
     "vue-lottie": "^0.2.1",
-    "vue-slick-carousel": "^1.0.6"
+    "vue-slick-carousel": "^1.0.6",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
