--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sass-loader": "^13.0.2",
     "vue": "^2.6.14",
     "vue-lottie": "^0.2.1",
+    "vue-router": "^3.6.5",
     "vue-slick-carousel": "^1.0.6",
     "vuex": "^3.6.2"
   },
